--- a/.envExample
+++ b/.envExample
@@ -1,3 +1,3 @@
-EMAIL_USER = 'malashevich2002@gmail.com'
-EMAIL_PASSWORD = 'qweasdzxc!@#'
-EMAIL_FROM = 'malashevich2002@gmail.com'
+# EMAIL_USER = 'malashevich2002@gmail.com'
+# EMAIL_PASSWORD = 'qweasdzxc!@#'
+# EMAIL_FROM = 'malashevich2002@gmail.com'
